# bwkp

./: .dockerignore  .editorconfig  .gitignore  .golangci.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  go.mod  go.sum  install.sh  magefile.go  release-please-config.json
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: feature.md  fix.md
.github/workflows/: ci.yml  release-please.yml  release.yml
Casks/: bwkp.rb
cmd/bwkp/: main.go
docs/tech/: architecture.md  building.md  mapping.md  release.md  security.md  testing.md
docs/user/: troubleshooting.md  usage.md
internal/app/: export.go  export_test.go  import.go  import_test.go
internal/atomicfile/: atomicfile.go  atomicfile_test.go
internal/cli/: cli.go  cli_test.go
internal/native/: api.go  ffi_native.go  ffi_stub.go  nss_linux.go
internal/progress/: progress.go  progress_test.go
internal/prompt/: secret.go  secret_test.go
internal/security/: secret.go  secret_test.go
native/bw/: Cargo.toml
native/bw/src/: lib.rs
native/ffi/: Cargo.toml
native/ffi/src/: lib.rs
native/kpdb/: CMakeLists.txt  bridge.cpp  bridge.h
native/kpdb/cmake/: PatchKeePassXC.cmake  Qt5LinguistToolsConfig.cmake
pkg/bwapi/: client.go  client_test.go  native.go  native_internal_test.go
pkg/convert/: converter.go  converter_test.go  import.go  import_test.go
pkg/dto/bw/: vault.go
pkg/dto/kp/: database.go
pkg/kpdb/: native.go  native_stub_test.go  native_test.go  reader.go  writer.go  writer_test.go
test/e2e/: compose.yml  e2e_test.go  go.mod  helpers_test.go  run.sh  waf-proxy.mjs
test/e2e/fixtures/: vault.json
test/e2e/register/: Cargo.toml
test/e2e/register/src/: main.rs
test/e2e/totp/: main.go
