[workspace]
members = ["native/bw", "native/ffi", "test/e2e/register"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "GPL-3.0-only"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
base64 = "0.22.1"
bitwarden-api-api = { git = "https://github.com/bitwarden/sdk-internal.git", rev = "7fd530e4852639d7391d062760891631ee9c15c1" }
bitwarden-api-base = { git = "https://github.com/bitwarden/sdk-internal.git", rev = "7fd530e4852639d7391d062760891631ee9c15c1" }
bitwarden-auth = { git = "https://github.com/bitwarden/sdk-internal.git", rev = "7fd530e4852639d7391d062760891631ee9c15c1" }
bitwarden-collections = { git = "https://github.com/bitwarden/sdk-internal.git", rev = "7fd530e4852639d7391d062760891631ee9c15c1" }
bitwarden-core = { git = "https://github.com/bitwarden/sdk-internal.git", rev = "7fd530e4852639d7391d062760891631ee9c15c1", features = ["internal"] }
bitwarden-crypto = { git = "https://github.com/bitwarden/sdk-internal.git", rev = "7fd530e4852639d7391d062760891631ee9c15c1" }
bitwarden-sync = { git = "https://github.com/bitwarden/sdk-internal.git", rev = "7fd530e4852639d7391d062760891631ee9c15c1" }
bitwarden-vault = { git = "https://github.com/bitwarden/sdk-internal.git", rev = "7fd530e4852639d7391d062760891631ee9c15c1" }
chrono = { version = "0.4.41", features = ["serde"] }
http = "1.3.1"
ml-dsa = "=0.1.0-rc.8"
pkcs8 = "=0.11.0-rc.11"
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls"] }
reqwest-middleware = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_qs = "0.15.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["serde", "v5"] }
zeroize = { version = "1.8.1", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
