[package]
name = "bwkp-bw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bitwarden-api-api.workspace = true
bitwarden-api-base.workspace = true
bitwarden-auth.workspace = true
bitwarden-collections.workspace = true
bitwarden-core.workspace = true
bitwarden-crypto.workspace = true
bitwarden-sync.workspace = true
bitwarden-vault.workspace = true
chrono.workspace = true
http.workspace = true
ml-dsa.workspace = true
pkcs8.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_qs.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
tokio.workspace = true
uuid.workspace = true
zeroize.workspace = true
